--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -76,7 +76,7 @@ The `txn` field needs to be used as the input to the wallet command
 helium-wallet hotspots add CrkBCiEBrlImpYLbJ0z0hw5b4g9isRyPrgbXs9X+RrJ4pJJc9MkSIQA7yIy7F+9oPYCTmDz+v782GMJ4AC+jM+VfjvUgAHflWSJGMEQCIGfugfLkXv23vJcfwPYjLlMyzYhKp+Rg8B2YKwnsDHaUAiASkdxUO4fdS33D7vyid8Tulizo9SLEL1lduyvda9YVRCohAa5SJqWC2ydM9IcOW+IPYrEcj64G17PV/kayeKSSXPTJOMCEPUDo+wM=
 ```
 
-After you verify the transaction, use append the command with `--commit`
+After you verify the transaction, append the command with `--commit`
 to submit it to the API. Note that you need sufficient funds to cover
 both the transaction cost (65000 DC) and the `staking_fee` (500000 DC).
 Thanks to the ["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
@@ -106,7 +106,7 @@ helium-wallet hotspots assert --gateway LIGHT_GATEWAY_PUBKEY --lat=37.7806295 --
 The `LIGHT_GATEWAY_PUBKEY` in the example from the previous section
 would be `11TL62V8NYvSTXmV5CZCjaucskvNR1Fdar1Pg4Hzmzk5tk2JBac`.
 
-After you verify the transaction, use append the command with `--commit`
+After you verify the transaction, append the command with `--commit`
 to submit it to the API. Note that you need sufficient funds to cover
 both the transaction cost (65000 DC) and the `staking_fee` (1000000 DC).
 Thanks to the ["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
