Updates the IG link

--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -66,4 +66,4 @@ Helium is everywhere. Here's the full list:
 * [Reddit](https://www.reddit.com/r/HeliumNetwork/)
 * [LinkedIn](https://www.linkedin.com/company/heliuminc/)
 * [Facebook](https://www.facebook.com/heliumsystems)
-* [Instagram](https://www.instagram.com/join.helium/)
+* [Instagram](https://www.instagram.com/helium/)
