remove table from light hotspot. add it to mine-hnt

--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -21,6 +21,11 @@ Since Data Only Hotspots do not earn Proof of Coverage rewards, they may be
 permissionlessly added to the blockchain. Once added to the blockchain and
 with location asserted, they will earn $HNT when forwarding network data.
 
+| Rewards Type                 | Data Only Hotspots | Full Hotspots |
+| :--------------------------- | :----------------- |:------------- |
+| Network Data Forwarding      | YES                | YES           |
+| Proof of Coverage            | NO                 | YES           |
+
 # Setup a data only hotspot
 
 ## Transactions & Cost
