--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -17,7 +17,7 @@ released in early July. This guide is released for preparation only.
 Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
 **Proof of Coverage Rewards**.
 
-Since Data Only Hotspots do not earn Proof of Coverage rewards, they may be
+Since Data Only Hotspots do not earn Proof-of-Coverage rewards, they may be
 permissionlessly added to the blockchain. Once added to the blockchain and
 with location asserted, they will earn $HNT when forwarding network data.
 
