--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -26,7 +26,7 @@ with location asserted, they will earn $HNT when forwarding network data.
 | Network Data Forwarding      | YES                | YES           |
 | Proof of Coverage            | NO                 | YES           |
 
-# Setup a data only hotspot
+# Setup a Data Only Hotspot
 
 ## Transactions & Cost
 
