--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -30,7 +30,7 @@ with location asserted, they will earn $HNT when forwarding network data.
 
 ## Transactions & Cost
 
-Every hotspot on the blockchain goes through two transactions:
+Every Hotspot on the blockchain goes through two transactions:
 * **add hotspot**: links the hotspot's key (`swarm_key`) of a hotspot to a
 user's wallet
 * **assert location**: provides GPS location, altitude, and dBi antenna
