--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -31,7 +31,7 @@ with location asserted, they will earn $HNT when forwarding network data.
 ## Transactions & Cost
 
 Every Hotspot on the blockchain goes through two transactions:
-* **add hotspot**: links the hotspot's key (`swarm_key`) of a hotspot to a
+* **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
 user's wallet
 * **assert location**: provides GPS location, altitude, and dBi antenna
 output for the hotspot
