--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -33,7 +33,7 @@ with location asserted, they will earn $HNT when forwarding network data.
 Every Hotspot on the blockchain goes through two transactions:
 * **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
 user's wallet
-* **assert location**: provides GPS location, altitude, and dBi antenna
+* **assert location**: provides GPS location, elevation (in meters), and dBi antenna
 output for the hotspot
 
 The fee schedule is as follows:
