--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -46,7 +46,7 @@ You should [setup a packet forwarder](/use-the-network/setup-a-packet-forwarder)
 with the [light hotspot client](/use-the-network/light-hotspots).
 
 In addition, you should setup a [CLI wallet](/wallets/cli-wallet) as this
-is currently the only wallet that supports data only hotspots.
+is currently the only wallet that supports Data Only Hotspots.
 
 **Note**: you can import a mobile wallet to the CLI.
 **Another note**: you should __not__ install the CLI on your gateway
