--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -34,7 +34,7 @@ Every Hotspot on the blockchain goes through two transactions:
 * **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
 user's wallet
 * **assert location**: provides GPS location, elevation (in meters), and dBi antenna
-output for the hotspot
+output for the Hotspot
 
 The fee schedule is as follows:
 * **add data only hotspot**: 500000 DC ($5)
