--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -53,7 +53,7 @@ is currently the only wallet that supports Data Only Hotspots.
 
 ## Add Hotspot
 
-From a terminal on the device where the light hotspot client is installed,
+From a terminal on the device where the Light Hotspot client is installed,
 you need to generate the `add hotspot` transaction.
 
 ```
