--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -88,7 +88,7 @@ Thanks to the ["implicit burn" mechanism](/blockchain/transaction-fees/#transact
 available HNT will be used to cover the transaction if you have
 insufficient DCs.
 
-You can track the transactions progress in being processed by using the
+You can track the transaction progress by using the
 transaction hash at the following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
 Once the transaction clears, you're done linking the hotspot with your
