--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -91,7 +91,7 @@ insufficient DCs.
 You can track the transaction progress by using the
 transaction hash at the following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
-Once the transaction clears, you're done linking the hotspot with your
+Once the transaction clears, you're done linking the Hotspot with your
 wallet.
 
 :::warning
