--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -96,7 +96,7 @@ wallet.
 
 :::warning
 At this point, you will want to be certain that you've backed up the
-light hotspot's keypair. It's location can be customized in the client's
+light hotspot's keypair. Its location can be customized in the client's
 `settings.toml`, but by default, it's located at
 `/etc/helium_gateway/key.bin`
 :::
