--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -103,7 +103,7 @@ light hotspot's keypair. Its location can be customized in the client's
 
 ## Assert Hotspot
 
-To assert the gateway using the `helium-wallet hotspots assert`
+To assert the Hotspot using the `helium-wallet hotspots assert`
 ```
 helium-wallet hotspots assert --gateway LIGHT_GATEWAY_PUBKEY --lat=37.7806295 --lon=-122.4008481
 ```
