--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -121,5 +121,5 @@ insufficient DCs.
 You can track the transaction progress by using the
 transaction hash at the following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
-Once the transaction clears, you're data only hotspot is ready to start
+Once the transaction clears, your Data Only Hotspot is ready to start
 earning!
