--- a/docs/blockchain/transaction-fees/transaction-fees.mdx
+++ b/docs/blockchain/transaction-fees/transaction-fees.mdx
@@ -32,7 +32,7 @@ based on the current $USD/HNT price as defined by the HNT Price Oracle.)
 | Transferring Device Packet Data | Fee paid by device owner when sending or receiving sensor data. Metered per 24 bytes.                                        | `1`           | `$.00001`   |
 | Add Full Hotspot                | Fee paid to add full Hotspot to the blockchain. **Fee is generally covered by Hotspot maker**.                               | `4000000`     | `$40`       |
 | Add Data Only Hotspot           | Fee paid to add a Data Only Hotspot to the blockchain.                                                                       | `500000`      | `$5`       |
-| Assert Hotspot Location         | Required when asserting a Gateway's location. \(The **first assertions** is generaly covered by hotspot maker\)             | `1000000`     | `$10`       |
+| Assert Hotspot Location         | Required when asserting a Hotspot's location. \(The **first assertions** is generaly covered by Hotspot maker\)             | `1000000`     | `$10`       |
 | Purchasing a blockchain OUI     | Buy an OUI from the Helium blockchain                                                                                        | `10000000`    | `$100`      |
 | Purchasing a blockchain Subnet  | Buy a Subnet from the Helium blockchain                                                                                      | `10000000`    | `$100`      |
 
