--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -1,7 +1,7 @@
 ---
 id: docker-integration
 sidebar_label: Docker Integration
-slug: /mine-hnt/hotspot-makers/docker-integration
+slug: /mine-hnt/full-hotspots/become-a-maker/docker-integration
 ---
 
 # Docker Integration
@@ -58,7 +58,7 @@ generally require additional customization to integrate well with your host
 system.
 
 Start by following
-[these instructions](https://docs.helium.com/mine-hnt/build-a-packet-forwarder#run-the-miner).
+[these instructions](/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation).
 If that ends up being no problem, then you're doing great! The extra sections in
 this guide will discuss things you should do when preparing a production system
 for the Miner container.
