Updated Approved Makers link
Corrected Approved Makers link to new /mine-hnt/full-hotspots

--- a/docs/faq/hotspot-manufacturers.mdx
+++ b/docs/faq/hotspot-manufacturers.mdx
@@ -10,7 +10,7 @@ slug: /faq/hotspot-manufacturers
 Helium, Inc. manufactured the first set of Hotspots on the Network. (These are often referred to as "OGs."). Helium, Inc. is no longer manufacturing Hotspots, but there is now an extensive list of approved manufactures (known in the community as "Makers")
 
 * [All approved Hotspots can be found here](https://www.helium.com/store)
-* [All approved Makers can be found here](/mine-hnt/hotspot-makers/approved-makers/#approved-makers).
+* [All approved Makers can be found here](/mine-hnt/full-hotspots).
 
 - Please be very careful if purchasing a Helium Hotspot from a non-authorized seller.  Hotspots can be transferred from one Helium wallet to another.  Once they are added to the blockchain, only the owning wallet can transfer it to another. Any transfers are solely between the two entities ("Buyer" and "Seller"), and Helium is not involved.
 - Also note that the Helium Hotspot limited warranty is only valid for the original sale to the original owner.  Resold Helium Hotspots from anyone other than Helium directly are not under any warranty whatsoever.  Please refer to their documentation for any authorized reseller policy.
