reworded according to @madninja

--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -1968,7 +1968,7 @@ _Query Parameters_
 GET https://api.helium.io/v1/hotspots/:address/witnesses
 ```
 
-Retrieves the last known list of witnesses for a given hotspot.
+Retrieves the list of witnesses for a given hotspot over a number of blocks.
 
 <Tabs
   block={true}
