Add Chorus One as Staking Provider
Adding Chorus One to the provider list to launch Helium nodes with

--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -102,6 +102,7 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 
 :::
 
+* [Chorus One](https://chorus.one/whitelabel-staking)
 * [Helium Rising](https://www.heliumrising.com)
 * [Argon.build](https://www.argon.build)
 * [HNT Validators](https://www.hntvalidators.com)
