--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -114,4 +114,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [Vanager](https://vanager.io)
 * [StakeJoy](https://stakejoy.com)
 * [NodeValidators](https://nodevalidators.com)
-* [Chorus One](https:chorus.one/whitelabel-one)
+* [Chorus One](https://chorus.one/products/whitelabel-staking)
