--- a/docs/use-the-network/console/console-v2-beta.mdx
+++ b/docs/use-the-network/console/console-v2-beta.mdx
@@ -1,8 +1,50 @@
 ---
 id: console-v2-beta
-sidebar_label: Introduction
+sidebar_label: FAQ
 slug: /use-the-network/console/console-v2-beta
 ---
 
-# Helium Console 2.0 Beta
+# Console 2.0 Beta FAQ
 
+**Important** on staging the first-time a device joins could take up to 10 to 20 mins. This is because the device information is being added to the blockchain and needs to be propagated to miners.
+
+### What’s changed in Console 2.0?
+
+The biggest new feature of Console 2.0 is Flows. 
+Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integration. 
+
+### What’s the same in Console 2.0?
+
+The interface and work flows for the following have remained largely unchanged:
+- Data Credit 
+- Organizations
+- Users
+
+### How do to participate and provide feedback?
+
+Sign up for an staging account [here](https://staging-console.helium.wtf/).
+
+Provide feedback [here](https://github.com/helium/console/issues) and use label (staging).
+
+### Why did you make these changes to Console 2.0?
+
+Based on learnings from your feedback, the team wanted to deliver a much more streamlined and intuitive experience to accomplish core user goals including adding devices, defining functions, and setting up integrations to transfer data to endpoints.
+
+### Do labels still exist? Do I still need labels? What capabilities do labels have?
+
+Yes Labels will still exist to organize and manage devices. Users can choose to apply a single or multiple Labels  to as many devices as needed, for example, to identify a sensor type like a temp sensor or location of the sensor. Anytime Labels are updated the changes flow to all devices with the Labels.
+
+### What happens to functionality that used to be tied to labels (ADR, Notifications, multiple packet purchases)?
+
+This functionality still exists. These settings are defined as general settings and can be applied to devices or groups of devices in the Flows workspace. Documentation will be coming.
+
+### When will Console 2.0 get released?
+
+It depends on the feedback and issues reported during the Console 2.0 beta phase, but our goal is to release Console 2.0 in approximately 4 - 6 weeks. 
+
+### What will happen to devices and settings when you migrate Console 2.0 to the production server?
+
+Nothing. Your devices and configurations will be preserved and you won’t need to take any action. 
+
+### What happens to my Data Credit balance?
+This migration has no impact on Data Credit balances.
