--- a/docs/use-the-network/console/console-v2-beta.mdx
+++ b/docs/use-the-network/console/console-v2-beta.mdx
@@ -11,7 +11,7 @@ slug: /use-the-network/console/console-v2-beta
 ### What’s changed in Console 2.0?
 
 The biggest new feature of Console 2.0 is Flows. 
-Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integration. 
+Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integrations. 
 
 ### What’s the same in Console 2.0?
 
