--- a/docs/use-the-network/console/console-v2-beta.mdx
+++ b/docs/use-the-network/console/console-v2-beta.mdx
@@ -16,7 +16,7 @@ Flows is a visual-centric view of the key elements in Console and allows users t
 ### What’s the same in Console 2.0?
 
 The interface and work flows for the following have remained largely unchanged:
-- Data Credit 
+- Data Credits 
 - Organizations
 - Users
 
