--- a/docs/use-the-network/console/console-v2-beta.mdx
+++ b/docs/use-the-network/console/console-v2-beta.mdx
@@ -32,7 +32,7 @@ Based on learnings from your feedback, the team wanted to deliver a much more st
 
 ### Do labels still exist? Do I still need labels? What capabilities do labels have?
 
-Yes Labels will still exist to organize and manage devices. Users can choose to apply a single or multiple Labels  to as many devices as needed, for example, to identify a sensor type like a temp sensor or location of the sensor. Anytime Labels are updated the changes flow to all devices with the Labels.
+Yes. Labels will still exist to organize and manage devices. Users can choose to apply a single or multiple Labels  to as many devices as needed; for example, to identify a sensor type like a "temp sensor" or location of the sensor. Anytime Labels are updated the changes flow to all devices with the Labels.
 
 ### What happens to functionality that used to be tied to labels (ADR, Notifications, multiple packet purchases)?
 
