--- a/docs/use-the-network/console/console-v2-beta.mdx
+++ b/docs/use-the-network/console/console-v2-beta.mdx
@@ -6,7 +6,9 @@ slug: /use-the-network/console/console-v2-beta
 
 # Console 2.0 Beta FAQ
 
-**Important** on staging the first-time a device joins could take up to 10 to 20 mins. This is because the device information is being added to the blockchain and needs to be propagated to miners.
+:::info
+**Important** the first time a Console 2.0 beta device joins could take up to 10 to 20 mins while device information is added to the blockchain and the relevant block is propagated to miners.
+:::
 
 ### What’s changed in Console 2.0?
 
@@ -40,7 +42,7 @@ This functionality still exists. These settings are defined as general settings 
 
 ### When will Console 2.0 get released?
 
-It depends on the feedback and issues reported during the Console 2.0 beta phase, but our goal is to release Console 2.0 in approximately 4 - 6 weeks. 
+It depends on the feedback and issues reported during the Console 2.0 beta phase, but our goal is to release Console 2.0 in approximately 4 - 6 weeks from beta. 
 
 ### What will happen to devices and settings when you migrate Console 2.0 to the production server?
 
