--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -62,6 +62,7 @@ channels are the two most relevant for developers using the Network.
 			<a className="block" href="/use-the-network/console/labels"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Labels</a>
 	    	<a className="block" href="/use-the-network/console/integrations"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Integrations</a>
 			<a className="block" href="/use-the-network/console/api"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console API</a>
+			<a className="block" href="/use-the-network/console/console-v2-beta"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console 2.0 Beta</a>
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
 		    <img className="homeicon" src={useBaseUrl("img/use-the-network/use3.svg")} />
