--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -18,8 +18,11 @@ Device Management includes:
 - Device ID registration and seamless, secure onboarding and authentication
 - Data Credits for utilizing the Helium Network
 
-Console is available as a free to use hosted application at
-[console.helium.com](https://console.helium.com).
+:::info
+[Console 2.0 Beta](/use-the-network/console/console-v2-beta) is available for testing and feedback. 
+:::
+
+Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
 
 * [Console Quickstart](/use-the-network/console/quickstart)
 * [Users and Organizations](/use-the-network/console/users)
