--- a/docs/mine-hnt/validators/testnet/wallet.mdx
+++ b/docs/mine-hnt/validators/testnet/wallet.mdx
@@ -69,17 +69,21 @@ Use `--commit` after preview to submit the transaction to network.
 
 ### Unstake Tokens
 
-If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months in mainnet) your initial staking amount will be returned to the wallet.
+If you unstake tokens the validator node enters a stake cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5.7 months in mainnet) your initial staking amount will be released to the wallet.
 
-You need to include the stake release block height which should be at least the current block height plus the cooldown period, and 5-10 blocks to allow for chain processing delays.
+To ensure the operator understands this unstake operation is not reverseable and cannot be shortened, there are additional calculations to be performed in the unstake command. You need to include the stake release block height which should be at least the current block height plus the cooldown period, and 5-10 blocks to allow for chain processing delays.
 
-For example, if the current block height was 5000, you'd add 250,000 for a stake release height plus an additional 10 to allow for chain processing delays. Therefore the `stake-release-height` is `5000 + 250000 + 10` or `255010`.
+For example, if the current block height was 5000, you'd add 250,000 for the stake withdrawl cooldown period, plus an additional 10 blocks to allow for chain processing delays. Therefore the `stake-release-height` = `5000 + 250000 + 10` or `255010`.
 
 :::info
 
 For testnet, the cooldown period is shortened to 180 blocks, approximately 3 hours. In the above calculation, replace `250000` with `180`.
 
 :::
+
+The cooldown length, in blocks, is called `stake_withdrawal_cooldown` and is a chain variable. This variable is viewable by running `miner ledger variables stake_withdrawal_cooldown`.
+
+Once the unstake process is completed, the validator process may be terminated and destroyed. A validator that has been unstaked will not earn rewards and cannot be restaked after it has been unstaked.
 
 #### To unstake tokens from a validator node perform the following:
 
