Troubleshooting: Validator stuck at a block

--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -30,6 +30,11 @@ Syncing to the blockchain could be impacted for the following reasons:
 * your validator is disconnecting
 * you just launched an AMI instance (if using AWS)
 
+## Validator stuck at a block
+If your validator appears to be stuck at a particular block and no longer syncing, you may need to take manual action for your validator to make progress.
+
+1. Reset the validator. You can reference this [testnet step](https://docs.helium.com/mine-hnt/validators/testnet/deployment-guide/#steps-to-get-back-on-the-current-chain) for commands.
+
 ## Resources
 
 * [HIP 25](https://github.com/helium/HIP/blob/master/0025-validators.md)- where it all started the approved validator proposal
