--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -32,6 +32,8 @@ things like:
 * [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
 * [Understanding Hexagons](/wallets/app-wallet/hexagons)
 * [Discovery Mode](/wallets/app-wallet/discovery-mode)
+* [Transaction Failures](/wallets/app-wallet/transaction-failures)
+
 
 ## Hotspot Tab
 
