--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -1,5 +1,5 @@
 ---
-id: transaction_failures
+id: transaction-failures
 title: Transaction Failures
 sidebar_label: Types of Transaction Failures
 slug: /wallets/app-wallet/transaction-failures
