updated staking providers
Added Figment to Staking Providers

--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -115,3 +115,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [StakeJoy](https://stakejoy.com)
 * [NodeValidators](https://nodevalidators.com)
 * [Chorus One](https://chorus.one/products/whitelabel-staking)
+* [Figment](https://figment.io/)
