--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -59,7 +59,7 @@ Due to the decentralized nature of the Helium network, it’s important that own
 
 If you see this notification, it means the the Hotspot you’re about to purchase has not shown “proof of life” recently. 
 
-**Recommended Fix:** Notify the person you’re purchasing this Hotspot from that they should plug the Hotspot back into internet and monitor the Hotspot for activity before trying again.
+**Recommended Fix:** Notify the other person involved in the transfer of this Hotspot from that they should conect the Hotspot back into Internet and monitor the Hotspot for activity before trying again.
 
 ### Buyer Insufficient HNT Balance
 
@@ -104,6 +104,5 @@ If you updated gain, look for `“gain”`. Please note this value is multiplied
 If you updated elevation, look for `“elevation”`. This is in meters.
 
 If you updated the location, look for `“lng”`, `“lat”` or `“geocode”`.
-
 
 
