--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -57,7 +57,7 @@ Please check out the [Transfer Hotspot Guide](https://docs.helium.com/wallets/ap
 
 Due to the decentralized nature of the Helium network, it’s important that owners and new owners of Hotspots know what they’re getting is a functional unit that is able to sync the blockchain and participate in PoC (the way Hotspots mine $HNT). Before transferring a Hotspot, the blockchain checks to see if it has had recent activity in the last 1200 blocks. Activity counts as creating a challenge, witnessing a challenge, or sending a beacon. It also checks that it’s fully synced to the blockchain.
 
-If you see this notification, it means the the Hotspot you’re about to purchase has not shown “proof of life” recently. 
+If you see this notification, it means the the Hotspot you’re about to transfer has not shown “proof of life” recently. 
 
 **Recommended Fix:** Notify the other person involved in the transfer of this Hotspot from that they should conect the Hotspot back into Internet and monitor the Hotspot for activity before trying again.
 
@@ -104,5 +104,4 @@ If you updated gain, look for `“gain”`. Please note this value is multiplied
 If you updated elevation, look for `“elevation”`. This is in meters.
 
 If you updated the location, look for `“lng”`, `“lat”` or `“geocode”`.
-
 
