--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -27,7 +27,7 @@ Nonce is a number included in every transaction to guarantee the data is "live" 
 
 Transaction fees are required on the network to prevent spamming. These fees use Data Credits (DC) and the Helium app uses [implicit burn](https://docs.helium.com/blockchain/transaction-fees/#transaction-fees-and-implicit-burn) to determine the appropriate amount of HNT to burn to generate these DCs.
 
-How much HNT to burn, depends on the [Oracle price](https://docs.helium.com/blockchain/oracles/#hnt-price-oracles). The Oracle price is the median $HNT from a list of individual oracles and used to weather large swings in price. In special cases, the price of $HNT may shift enough in a short time period such that the amount of HNT burned to generate DCs *is not enough*. 
+How much HNT to burn depends on the [Oracle price](https://docs.helium.com/blockchain/oracles/#hnt-price-oracles). The Oracle price is the median $HNT price from a list of individual oracles and used to weather large swings in price. In special cases, the price of $HNT may shift enough in a short time period such that the amount of HNT burned to generate DCs *is not enough*. 
 
 :::info
 
