--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -15,7 +15,7 @@ The Helium app automatically notifies users whenever a transaction fails. Transa
 :::note
 
 What is a nonce?
-Nonce is a number included in every transaction to guarantee the data is "live" and not replayed, preventing the blockchain from replay attacks. The Helium app uses a speculative nonce, which increments for every type of transaction. In some cases, the blockchain's transaction manager processes these transactions out of order, that causes some transactions to fail.
+Nonce is a number included in every transaction to guarantee the data is "live" and not replayed, preventing the blockchain from replay attacks. The Helium app uses a speculative nonce, which increments for every type of transaction. In some cases, the blockchain's transaction manager processes these transactions out of order which causes some transactions to fail.
 
 :::
 
